# vn-corporate-actions

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  dependency-review.yml  labeler.yml  pre-commit-autoupdate.yml  release-please.yml  scorecard.yml  stale.yml
examples/: basic_usage.py
src/vn_corporate_actions/: __init__.py  actions.py  adjuster.py
tests/: conftest.py  test_actions.py  test_adjuster.py
