[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vn-corporate-actions"
version = "0.3.0"
description = "Vietnamese equity corporate actions: splits, dividends, bonus issues, rights — with backwards-adjusted price series."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "DataCore Vietnam", email = "dev@datacore.vn" },
]
keywords = [
    "vietnam",
    "finance",
    "stocks",
    "corporate-actions",
    "dividends",
    "splits",
    "adjusted-prices",
    "hose",
    "hnx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/DataCore-VietNam/vn-corporate-actions"
Repository = "https://github.com/DataCore-VietNam/vn-corporate-actions"
Issues = "https://github.com/DataCore-VietNam/vn-corporate-actions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_corporate_actions"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
